--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decodificador de texto</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="header-title"><span>.</span>Decodificador de texto<span>.</span></h1>
+    </header>
+    <main class="main">
+        <section class="main-inputdata">
+            <div class="main-inputdata-textarea">
+                <textarea name="text" cols="30" rows="10">Digite seu texto</textarea>
+            </div>
+            <div class="main-inputdata-information">
+                <i class="main-inputdata-information-icon fa-solid fa-circle-exclamation"></i>
+                <p class="main-inputdata-text">Apenas letras minúsculas e sem acentos.</p>
+            </div>
+            <div class="main-inputdata-button">
+                <button class="main-inputdata-button-encrypt">Criptografar</button>
+                <button class="main-inputdata-button-decrypt">Descriptografar</button>
+            </div>
+        </section>
+        <section class="main-outputdata">
+              <div class="main-outputdata-img">
+                <img src="/assets/images/decoder_img.svg" alt="garoto sentado com um notebook em frente a uma tela decodificadora com lupa.">
+              </div>
+              <h2 class="main-outputdata-subtitle">Nenhuma mensagem encontrada</h2>
+              <p class="main-outputdata-paragraph">Digite um texto que você deseja criptografar ou descriptografar.</p>
+        </section>
+    </main>
+    <footer class="footer">
+        <p>Criado por: <span>Verônica Vilas</span> |</p>
+        <a href="https://github.com/VeronicaVilas" class="fa-brands fa-github"></a>
+        <a href="https://www.linkedin.com/in/ver%C3%B4nica-vilas-b23242209/" class="fa-brands fa-linkedin-in"></a>
+    </footer>
+    <script src=""></script>
 </body>
 </html>
