feat: added text encryption function

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         <a href="https://github.com/VeronicaVilas" class="fa-brands fa-github"></a>
         <a href="https://www.linkedin.com/in/ver%C3%B4nica-vilas-b23242209/" class="fa-brands fa-linkedin-in"></a>
     </footer>
-    <script src=""></script>
+    <script src="/src/scripts/app.js"></script>
 </body>
 </html>
