style: added responsiveness for 768px screens

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               </div>
               <h2 class="main-outputdata-subtitle">Nenhuma mensagem encontrada</h2>
               <p class="main-outputdata-paragraph">Digite um texto que você deseja criptografar ou descriptografar.</p>
+              <p class="main-outputdata-outputText"></p>
         </section>
     </main>
     <footer class="footer">
