--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </div>
         </section>
         <section class="main-outputdata">
-              <div class="main-outputdata-img">
-                <img src="/assets/images/decoder_img.svg" alt="garoto sentado com um notebook em frente a uma tela decodificadora com lupa.">
+              <div>
+                <img class="main-outputdata-img" src="/assets/images/decoder_img.png" alt="garota em pé com uma com expressão de dúvida e uma interrogação na cabeça.">
               </div>
               <h2 class="main-outputdata-subtitle">Nenhuma mensagem encontrada</h2>
               <p class="main-outputdata-paragraph">Digite um texto que você deseja criptografar ou descriptografar.</p>
