feat: added button to copy and paste text

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
               <h2 class="main-outputdata-subtitle">Nenhuma mensagem encontrada</h2>
               <p class="main-outputdata-paragraph">Digite um texto que você deseja criptografar ou descriptografar.</p>
               <p class="main-outputdata-outputText"></p>
+              <button class="main-outputdata-copyButton">
+                <i class="fa fa-clone"></i>
+              </button>
         </section>
     </main>
     <footer class="footer">
