fix: update index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decodificador de texto</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
     <header class="header">
@@ -27,7 +27,7 @@
         </section>
         <section class="main-outputdata">
               <div>
-                <img class="main-outputdata-img" src="/assets/images/decoder_img.png" alt="garota em pé com uma com expressão de dúvida e uma interrogação na cabeça.">
+                <img class="main-outputdata-img" src="assets/images/decoder_img.png" alt="garota em pé com uma com expressão de dúvida e uma interrogação na cabeça.">
               </div>
               <h2 class="main-outputdata-subtitle">Nenhuma mensagem encontrada</h2>
               <p class="main-outputdata-paragraph">Digite um texto que você deseja criptografar ou descriptografar.</p>
@@ -42,6 +42,6 @@
         <a href="https://github.com/VeronicaVilas" class="fa-brands fa-github"></a>
         <a href="https://www.linkedin.com/in/ver%C3%B4nica-vilas-b23242209/" class="fa-brands fa-linkedin-in"></a>
     </footer>
-    <script src="/src/scripts/app.js"></script>
+    <script src="src/scripts/app.js"></script>
 </body>
 </html>
